<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TampilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:gravity="center"
            android:text="@string/judul_lagu"
            android:textColor="@android:color/black"
            android:textSize="@dimen/large_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:gravity="center"
            android:text="@string/artist"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/iv_lagu"
            android:layout_width="396dp"
            android:layout_height="256dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/medium_margin"
            android:contentDescription="@string/gambar"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/tv_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:gravity="center"
            android:text="@string/album" />


        <TextView
            android:id="@+id/tv_lirik_lagu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:gravity="center"
            android:text="@string/lirik_lagu"
            android:textSize="@dimen/medium_text" />
    </LinearLayout>

</ScrollView>